# giada-engine

./: .gitignore  ChangeLog  GiadaEngineQuickstart.html  KnownIssues  Makefile.am  Quickstart.html  README.md  configure.ac  midifile  rtaudio  rtmidi
GiadaDartUI/: pubspec.yaml  server.dart
GiadaDartUI/web/: GiadaUI.dart  GiadaUI.html  giada.css  netlink.dart
engine/: Makefile  Makefile.am  Makefile.in  channel.cpp  channel.h  command.cpp  command.h  config.cpp  config.h  control.cpp  control.h  engine.h  init.cpp  init.h  interface.cpp  interface.h  kernelaudio.cpp  kernelaudio.h  kernelmidi.cpp  kernelmidi.h  main.cpp  midichannel.cpp  midichannel.h  mixer.cpp  mixer.h  patch.cpp  patch.h  pluginHost.cpp  pluginHost.h  recorder.cpp  recorder.h  samplechannel.cpp  samplechannel.h  utility.cpp  utility.h  wave.cpp  wave.h
engine/.deps/: channel.Po  config.Po  control.Po  glue.Po  init.Po  interface.Po  kernel.Po  kernelaudio.Po  kernelmidi.Po  main.Po  midichannel.Po  mixer.Po  patch.Po  recorder.Po  samplechannel.Po  utility.Po  wave.Po
interfaces/: Makefile  Makefile.am  Makefile.in
interfaces/fltk/: Makefile  Makefile.am  Makefile.in  engine.h  fltk.h  gd_about.cpp  gd_about.h  gd_actionEditor.cpp  gd_actionEditor.h  gd_beatsInput.cpp  gd_bpmInput.cpp  gd_bpmInput.h  gd_browser.cpp  gd_browser.h  gd_config.cpp  gd_config.h  gd_devInfo.cpp  gd_editor.cpp  gd_editor.h  gd_keyGrabber.cpp  gd_mainWindow.cpp  gd_mainWindow.h  gd_midiGrabber.cpp  gd_midiGrabber.h  gd_midiOutputSetup.cpp  gd_midiOutputSetup.h  gd_pluginList.cpp  gd_pluginList.h  gd_pluginWindow.cpp  gd_pluginWindow.h  gd_pluginWindowGUI.cpp  gd_pluginWindowGUI.h  gd_warnings.cpp  gd_warnings.h  ge_actionChannel.cpp  ge_actionChannel.h  ge_actionWidget.cpp  ge_actionWidget.h  ge_browser.cpp  ge_browser.h  (+22 more)
interfaces/fltk/.deps/: gd_about.Po  gd_actionEditor.Po  gd_beatsInput.Po  gd_bpmInput.Po  gd_browser.Po  gd_config.Po  gd_devInfo.Po  gd_editor.Po  gd_keyGrabber.Po  gd_mainWindow.Po  gd_midiGrabber.Po  gd_midiOutputSetup.Po  gd_warnings.Po  ge_actionChannel.Po  ge_actionWidget.Po  ge_browser.Po  ge_channel.Po  ge_envelopeChannel.Po  ge_mixed.Po  ge_muteChannel.Po  ge_pianoRoll.Po  ge_waveform.Po  ge_window.Po  gg_keyboard.Po  gg_launcher.Po  gg_waveTools.Po  graphics.Po  gui_utils.Po  main.Po
interfaces/net/: Makefile.am  engine.h  giadaNetLexer.l  lexbuffer.cpp  lexbuffer.h  main.cpp  udpclient  udpclient.c  udpserver
libmdl/: Makefile.am  midibase.cpp  midibase.h  midistream.cpp  midistream.h  seqcontext.cpp  seqcontext.h
midifile-4a41826/: Makefile  Makefile.library
midifile-4a41826/src-library/: MidiEvent.cpp  MidiEventList.cpp  MidiMessage.cpp
rtaudio-mod/: Makefile  Makefile.am  aclocal.m4  config.status  configure  configure.ac  librtaudio.pc  rtaudio-config
rtaudio-mod/autom4te.cache/: output.1  requests  traces.0  traces.1
rtaudio-mod/tests/: Makefile
rtmidi-2.1.0/: .gitignore  Makefile  RtMidi.h  config.status  librtmidi.pc  rtmidi-config
rtmidi-2.1.0/autom4te.cache/: output.0  requests  traces.0
rtmidi-2.1.0/tests/: Makefile
